-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.2:
-Tweaks to new price alerts feature
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.3:
-Config to adjust chain stats cache time
-Optimize API cache efficiency
-Fixed cron alert bug related to trade pairings other than BTC
-Allowed multiple cron job alerts per asset (different exchanges / trade pairings for same asset)
-Tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.4:
-Updated copyright year
-Show trading pair info in cron alerts text
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.5:
-Tweaks to mining calculator setups
-Upgraded binance API to v3
-Multi proxy support for API calls
-Minor bug fixes / cleanup
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.6:
-Alerts / checkups on proxy failure
-Simplified / highly compatible proxy config settings
-IDEX and HOTBIT exchange API support
-Optimized API caching
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.7:
-Proxy checkup compatibility (for CLI cron jobs)
-Tradeogre / Bigone / Bitforex markets API support
-Removed request params from API error notices in the UI
-Proxy alert type setting
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.8:
-Tweaks
-------------------------------------------------------------------























































































