@@ -9,7 +9,7 @@ LIVE DEMO: https://dragonfrugal.com/coin-prices/
 Just upload to your PHP-based web server and you should be all set, unless your host is a strict setup related to file writing permissions, in which case the 'cache' directory / all sub-directories permissions should be set to '777' chmod on unix / linux systems (or 'readable / writable' on windows systems). Your web host must have curl modules activated on your HTTP server. Most web hosting companies provide this "out-of-the-box" already. Contact your hosting provider if you encounter issues getting the real-time prices feeds from exchanges, and ask if curl is setup already. See below for an example on adding / editing your own markets into the coin list in config.php...it's very quick / easy to do (see bottom of this file for a pre-configured example set of assets / markets). Currently BTC / XMR / ETH / LTC / USDT based market pairing is compatible. Contact any supported exchanges help desk if you are unaware of the correct formatting of the trading pair name you are adding in the API configuration file (examples: Kraken has abitrary Xs inserted everywhere in SOME older pair names, HitBTC sometimes has tether pairing without the "T" in the symbol name).
 
 Setting up cron jobs for email alerts on price change: 
-cron.php in the root directory must be setup as a cron job on the server, if you want to take advantage of cron job based features like email alerts on price rise, etc. Consult your web server host's documentation or help desk, for your host's particular method of setting up a cron job. Note that you should have it run every X minutes 24/7, based on how often you want alerts / any other cron based features to run. Every 20 minutes is a good default time interval to start with. Here is an example cron job command for reference below. Replace system paths with the correct ones for your server:
+cron.php in the root directory must be setup as a cron job on the server, if you want to take advantage of cron job based features like email alerts on price change percentage, etc. Consult your web server host's documentation or help desk, for your host's particular method of setting up a cron job. Note that you should have it run every X minutes 24/7, based on how often you want alerts / any other cron based features to run. Every 20 minutes is a good default time interval to start with. Here is an example cron job command for reference below. Replace system paths with the correct ones for your server:
 /path/to/php -q /home/username/path/to/website_install/cron.php
 
 Feature requests and bug reports can be filed at the following URLS:
@@ -107,7 +107,7 @@ $proxy_list = array(
 					// 'ipaddress2:portnumber2',
 					);
 
-$proxy_alerts_freq = 1; // Re-allow proxy offline / misconfigured email alerts after X hours (can be 0)
+$proxy_alerts_freq = 1; // Re-allow proxy request error / misconfigured email alerts after X hours (can be 0)
 
 $proxy_alerts_type = 'email'; // 'email', or 'text', or 'notifyme', or 'all'...'email' keeps any text / notifyme price alert notifications a lot less cluttered ;-)
 
