@@ -20,12 +20,12 @@ if ( $_POST['submit_check'] == 1 || $_COOKIE['coin_amounts'] ) {
 <th class='border_lt'> Order</th>
 <th class='border_lt'> Exchange</th>
 <th class='border_lt' align='right'> Name</th>
-<th class='border_t'> (USD Value)</th>
+<th class='border_t'> USD Value</th>
 <th class='border_lt' align='right'> Amount</th>
 <th class='border_t'> Symbol</th>
-<th class='border_lt' align='right'> Trade Value</th>
-<th class='border_t'> (for)</th>
-<th class='border_lt'> Total</th>
+<th class='border_lt' align='right'> Market Value</th>
+<th class='border_t'> Market</th>
+<th class='border_lt'> Total Value</th>
 <th class='border_lrt'> USD Value</th>
     </tr>
   </thead>
